[commit 2020-06-29] 답글 있는 게시글 삭제의 경우

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -82,4 +82,8 @@
     <welcome-file-list> 
     	<welcome-file>/loginView.do</welcome-file> 
     </welcome-file-list>
+    
+    <session-config>
+    	<session-timeout>-1</session-timeout>
+    </session-config>
 </web-app>
