--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,8 @@
 		<listener-class>
 			org.springframework.web.context.ContextLoaderListener
 		</listener-class>
+	</listener>
+	<listener>
 		<listener-class>
 			org.springframework.security.web.session.HttpSessionEventPublisher
 		</listener-class>
